[package]
name = "ai-lebe"
version = "0.5.3"
authors = ["johannesvollmer <contact@johannesvollmer.com>"]
edition = "2018"

description = "A no_std port of ai-lebe"
repository = "https://github.com/atom-planet-embrace/ai-lebe"
documentation = "https://docs.rs/crate/ai-lebe/"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["endianness", "binary", "io", "byteorder", "endian", "no_std"]
categories = ["encoding", "filesystem", "algorithms"]
rust-version = "1.78.0"

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
proc-macro = false


[badges]
maintenance = { status = "actively-developed" }

[features]
# simd = []
default = []
std = ["no_std_io/std"]

[dependencies]
no_std_io = { version = "0.6", default-features = false }

[dev-dependencies]
bencher = "0.1.5"
byteorder = "1.4.3"

[[bench]]
name = "benches"
harness = false
required-features = ["std"]

[[test]]
name = "tests"
required-features = ["std"]

[profile.bench]
lto = true
debug = true

